# matita

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE.md  README.md  build_package.ps1  office-vba-api.json  pyproject.toml
data/: office-vba-api.json
docs/: backlog.md  documentation.md  index.md  myst.yml
docs/backlog/: item-01.md  item-02.md  item-03.md  item-04.md  item-05.md  item-06.md  item-08.md  item-09.md  item-10.md  item-11.md  item-12.md  item-13.md
docs/backlog/done/: item-07.md
examples/: example.py  example.xlsm
examples/example1-excel-hello-world/: hello_world.py  hello_world.xlsm
examples/example1-excel-manipulation/: example.py
examples/example1-hello-world/: hello_world_excel.py  hello_world_outlook.py  hello_world_powerpoint.py  hello_world_word.py
examples/example2-powerpoint-squares/: squares.pptm  squares.py
examples/example3-excel-eu-population/: data_source.md  eu-population.py  eu-population.xlsm  tps00001__custom_19561911_linear_2_0.csv
python_vba/: __init__.py  models.py  parser.py
pyvba_parser/: __init__.py  markdown.py  parser.py
scripts/: __main__.py
src/matita/office/: __init__.py  access.py  excel.py  office.py  outlook.py  powerpoint.py  word.py
src/matita/reference/: markdown.py  models.py
src/vipera/: markdown.py  models.py
src/vipera/office/: access.py  excel.py  outlook.py  powerpoint.py  word.py
src/vipera/reference/: __init__.py  models.py  (+1 more)
tests/: __main__.py  test_doc_page.md  test_office.py  test_reference.py  test_utils.py
utils/: __main__.py  markdown_parser.py  vba_doc_parser.py
