[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-vba"
version = "0.1.0"
description = "Parser for Office VBA Reference documentation"
authors = [{name = "Luca Franceschini", email = "lucaf@lucaf.eu"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
python-vba = "scripts.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_vba*"]
