[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vipera"
version = "0.1.0"
description = "Parser for Office VBA Reference documentation"
authors = [{name = "Luca Franceschini", email = "lucaf@lucaf.eu"}]
license = "MIT"
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
python-vba = "scripts.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_vba*"]
